--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -1560,6 +1560,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- For lattitude and maximum temperature, it is posivitely related to lattitude 0 and negatively related after that.\n",
+    "- Where as lattitude and cloudiness, lattitude and wind speed, and lattitude and Humidity there is no definitive pattern. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 136,
    "metadata": {},
@@ -1711,11 +1719,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- For lattitude and Northern hemisphere maximum temperature it is negatively related with slope -1.05\n",
+    "- Northern hemisphere Max temperature vs cloudiness and Humidity  there is no definitive pattern with a slope around 0\n",
+    "- Where as northern hemisphere max temperature vs  wind speed,  there is no slightly positive slope with a value around 0.29."
+   ]
   },
   {
    "cell_type": "code",
@@ -1788,6 +1798,15 @@
     "                    bottom=0.1, top=0.9,\n",
     "                    hspace=0.4, wspace=0.4)\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- For lattitude and Southern hemisphere maximum temperature, there is positivelyrelated with slope 1.05\n",
+    "- Southern hemisphere max temperature vs cloudiness and Humidity,  there is no definitive pattern with a slope around 0\n",
+    "- Northern hemisphere max temperature vs  wind speed there is no slightly negative slope with a value around -0.34."
    ]
   },
   {
