--- a/VacationPy.ipynb
+++ b/VacationPy.ipynb
@@ -266,7 +266,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "28f459924f8c4aa4a89815f43ca66026",
+       "model_id": "f520511c967449bd82d4afc6afe0c615",
        "version_major": 2,
        "version_minor": 0
       },
@@ -850,9 +850,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/ld/_spx9cwj74z4zm921xp1zssh0000gn/T/ipykernel_39826/3511615655.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  hotel_df['Hotel Name']=''\n",
+      "/var/folders/ld/_spx9cwj74z4zm921xp1zssh0000gn/T/ipykernel_39826/3511615655.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  hotel_df[\"Hotel Address\"]=''\n"
+     ]
+    }
+   ],
    "source": [
     "hotel_df['Hotel Name']=''\n",
     "hotel_df[\"Hotel Address\"]=''"
@@ -1600,7 +1619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1622,13 +1641,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b7e94f2b3ea74945b1c4f6a998d00eb5",
+       "model_id": "0fafd2a945bc4e87ac99a6f9248342a8",
        "version_major": 2,
        "version_minor": 0
       },
